Bug 1338486: Support implied parentheses in CSS.supports; r=xidorn

MozReview-Commit-ID: CUo371Hvj4T